filled in file readme

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         integrity='sha512-b2QcS5SsA8tZodcDtGRELiGv5SaKSk1vDHDaQRda0htPYWZ6046lr3kJ5bAAQdpV2mmA/4v0wQF9MyU6/pDIAg=='
         crossorigin='anonymous'>
 
+    <!-- Link personal css stylesheet -->
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 
