--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 </head>
 
 <body>
-
+    <input type="number" min="1" max="1000" id="inputKm" placeholder="Inserisci distanza (km)">
+    <input type="number" min="11" max="100" id="inputAge" placeholder="Inserisci età">
+    <button id="button">Conferma</button>
+    <p id="result" class="d-none"></p>
 
     <!-- Link Js file -->
     <script src="js/script.js"></script>
