--- a/index.html
+++ b/index.html
@@ -16,14 +16,82 @@
 
 </head>
 
-<body>
-    <input type="number" min="1" max="1000" id="inputKm" placeholder="Inserisci distanza (km)">
-    <input type="number" min="11" max="100" id="inputAge" placeholder="Inserisci età">
-    <button id="button">Conferma</button>
-    <p id="result" class="d-none"></p>
+<body class="bg-primary">
+    <div class="container-md py-5">
+        <h1 class="text-white text-center mb-4 text-uppercase">Calcola il prezzo del tuo biglietto</h1>
+        <form action="#" class="bg-white rounded-3 p-4 fw-bold mb-5" novalidate>
 
+            <div class="row mb-4 justify-content-center row-gap-3">
+                <div class="i-group col-8 col-sm-5 col-lg-3">
+                    <label for=" inputName" class="form-label text-primary">Nome Cognome</label>
+                    <input type="text" class="form-control border border-primary" id="inputName" required>
+                    <div class="input-wrong d-none">
+                        Si prega di inserire un nome!
+                    </div>
+                </div>
+                <div class="i-group col-8 col-sm-5 col-lg-3">
+                    <label for="inputKm" class="form-label text-primary">Km da percorrere</label>
+                    <input type="number" class="form-control border border-primary" id="inputKm" min="1" max="1000"
+                        required>
+                    <div class="input-wrong d-none">
+                        Valore non valido! (1-1000)Km
+                    </div>
+                </div>
+                <div class="i-group col-5 col-sm-3 col-lg-2">
+                    <label for="inputAge" class="form-label text-primary">Fascia d'età</label>
+                    <select id="inputAge" class="form-select d-block  border border-primary"
+                        aria-label="Default select example">
+                        <option value="minorenne">Minorenne</option>
+                        <option value="adulto">Adulto</option>
+                        <option value="over65">Over 65</option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="b-group d-flex justify-content-center column-gap-4">
+                <button id="button" type="button" class="border-primary rounded-2">Genera</button>
+                <button id="undo-button" type="button" class="border-primary rounded-2">Annulla</button>
+            </div>
+        </form>
+
+        <div id="ticket-show" class="d-none">
+            <h1 class="text-uppercase text-white text-center">Il tuo biglietto</h1>
+            <div id="ticket" class="bg-white p-4">
+                <h2 class="text-uppercase">Dettaglio passeggeri</h2>
+                <div class="ticket d-flex w-100">
+                    <div class="ticket-body w-100 container-fluid">
+                        <ul class="row w-100 mb-0 flex-wrap">
+                            <li class="list-group-item col-4">
+                                <h3>Nome passeggero</h3>
+                                <p id="output-name"></p>
+                            </li>
+                            <li class="list-group-item col-2">
+                                <h5 class="ticket-title">Offerta</h5>
+                                <p id="type-ticket" class="ticket-text"></p>
+                            </li>
+                            <li class="list-group-item col-2">
+                                <h5 class="ticket-title">Carrozza</h5>
+                                <p id="wagon" class="ticket-text"></p>
+                            </li>
+                            <li class="list-group-item col-2">
+                                <h5 class="ticket-title">Codice CP</h5>
+                                <p id="code" class="ticket-text"></p>
+                            </li>
+                            <li class="list-group-item col-2">
+                                <h5 class="ticket-title">Costo biglietto</h5>
+                                <p id="price" class="ticket-text"></p>
+                            </li>
+
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
     <!-- Link Js file -->
     <script src="js/script.js"></script>
+
 </body>
 
 </html>
